WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34086
[Gtk] media/video-reverse-play-duration.html fails on and off on Gtk buildbots
https://bugs.webkit.org/show_bug.cgi?id=34086
Summary
[Gtk] media/video-reverse-play-duration.html fails on and off on Gtk buildbots
Philippe Normand
Reported
2010-01-25 07:21:20 PST
This new test is flaky and should be skipped until we figure out what's wrong.
Attachments
cache media duration and fix didEnd() in case of reverse playback
(5.26 KB, patch)
2010-01-25 10:08 PST
,
Philippe Normand
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2010-01-25 07:37:33 PST
Skipped in
r53805
Philippe Normand
Comment 2
2010-01-25 10:08:41 PST
Created
attachment 47353
[details]
cache media duration and fix didEnd() in case of reverse playback
Philippe Normand
Comment 3
2010-01-27 00:25:45 PST
Landed as
r53909
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug